# py-fake-wwpdb_apps_validation

./: LICENSE.txt  README.md  pyproject.toml
wwpdb/apps/validation/: __init__.py
wwpdb/apps/validation/src/scripts/: star_to_cif.py
wwpdb/apps/validation/src/utils/: minimal_map_cif.py
